# SecurePassVe

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/securepassve_backend/: main.py
backend/src/securepassve_backend/api/v1/: router.py
backend/src/securepassve_backend/api/v1/endpoints/: debug.py  health.py  meta.py  vault.py
backend/src/securepassve_backend/api/v1/schemas/: debug.py  system.py  vault.py
backend/src/securepassve_backend/core/: config.py  exceptions.py  request_context.py  request_id.py  sentinel.py
backend/src/securepassve_backend/core/request/: request_id.py
backend/src/securepassve_backend/core/sentinel/: sentinel.py
backend/src/securepassve_backend/vault/: deps.py  repository.py
backend/tests/: conftest.py  test_debug_env.py  test_system.py
