[project]
name = "securepassve-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
